Fix: Columns which had `text-align:center` would cause the child row control to be rendered incorrectly.
- See thread 31278

--- a/css/responsive.dataTables.scss
+++ b/css/responsive.dataTables.scss
@@ -18,6 +18,7 @@ $close-button-background: #d33333 !default;
 	border-radius: 16px;
 	box-shadow: 0 0 3px #444;
 	box-sizing: content-box;
+	text-align: left;
 
 	// Use Courier New because it is common and consistent
 	font-family: 'Courier New', Courier, monospace;
